--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "tsc": "tsc --noemit --watch",
     "firebase:login": "node_modules/.bin/firebase login",
     "firebase:init": "node_modules/.bin/firebase init",
     "functions:build": "cd functions && npm run build:watch",
